sqlite/conformance/sqlite-sqltests/snapshot_tests/setops/snapshots/setops__compound-union-except.snap
---
source: setops.sqltest
expression: |-
  SELECT department FROM current_employees
      UNION
      SELECT department FROM contractors
      EXCEPT
      SELECT department FROM former_employees;
info:
  statement_type: SELECT
  tables:
  - contractors
  - current_employees
  - former_employees
  setup_blocks:
  - schema
  database: ':memory:'
---
QUERY PLAN
`--COMPOUND QUERY
   |--LEFT-MOST SUBQUERY
   |  `--SCAN current_employees USING COVERING INDEX idx_current_dept
   |--UNION USING TEMP B-TREE
   |  `--SCAN contractors USING COVERING INDEX idx_contractors_dept
   `--EXCEPT USING TEMP B-TREE
      `--SCAN former_employees USING COVERING INDEX idx_former_dept

BYTECODE
addr  opcode         p1  p2  p3  p4      p5  comment
   0  Init            0  25   0           0  Start at 25
   1  OpenEphemeral   0   0   0           0  cursor=0 is_table=false
   2  OpenRead        1   5   0  k(2,B)   0  index=idx_current_dept, root=5, iDb=0
   3  Rewind          1   8   0           0  Rewind index idx_current_dept
   4    Column        1   0   1           0  r[1]=idx_current_dept.department
   5    MakeRecord    1   1   2           0  r[2]=mkrec(r[1..1]); for compound_dedupe
   6    IdxInsert     0   2   0           8  key=r[2]
   7  Next            1   4   0           1
   8  OpenRead        2   7   0  k(2,B)   0  index=idx_contractors_dept, root=7, iDb=0
   9  Rewind          2  14   0           0  Rewind index idx_contractors_dept
  10    Column        2   0   3           0  r[3]=idx_contractors_dept.department
  11    MakeRecord    3   1   4           0  r[4]=mkrec(r[3..3]); for compound_dedupe
  12    IdxInsert     0   4   0           8  key=r[4]
  13  Next            2  10   0           1
  14  OpenRead        3   6   0  k(2,B)   0  index=idx_former_dept, root=6, iDb=0
  15  Rewind          3  19   0           0  Rewind index idx_former_dept
  16    Column        3   0   5           0  r[5]=idx_former_dept.department
  17    IdxDelete     0   5   1           0
  18  Next            3  16   0           1
  19  Rewind          0  22   0           0  Rewind  ephemeral(compound_dedupe)
  20    Column        0   0   6           0  r[6]=ephemeral(compound_dedupe).department
  21    ResultRow     6   1   0           0  output=r[6]
  22  Next            0  20   0           0
  23  Close           0   0   0           0
  24  Halt            0   0   0           0
  25  Transaction     0   1   6           0  iDb=0 tx_mode=Read
  26  Goto            0   1   0           0
