sqlite/conformance/sqlite-sqltests/snapshot_tests/setops/snapshots/setops__intersect-multiple-columns.snap
---
source: setops.sqltest
expression: |-
  SELECT name, department FROM current_employees
      INTERSECT
      SELECT name, department FROM former_employees;
info:
  statement_type: SELECT
  tables:
  - current_employees
  - former_employees
  setup_blocks:
  - schema
  database: ':memory:'
---
QUERY PLAN
`--COMPOUND QUERY
   |--LEFT-MOST SUBQUERY
   |  `--SCAN current_employees
   `--INTERSECT USING TEMP B-TREE
      `--SCAN former_employees

BYTECODE
addr  opcode         p1  p2  p3  p4              p5  comment
   0  Init            0  24   0                   0  Start at 24
   1  OpenEphemeral   0   0   0                   0  cursor=0 is_table=false
   2  OpenEphemeral   1   0   0                   0  cursor=1 is_table=false
   3  OpenRead        2   2   0  k(4,B,B,B,B)     0  table=current_employees, root=2, iDb=0
   4  Rewind          2   9   0                   0  Rewind table current_employees
   5    ColumnRange   2   1   1  2                0  r[1..2]=current_employees.columns[1..2]
   6    MakeRecord    1   2   3                   0  r[3]=mkrec(r[1..2]); for compound_dedupe
   7    IdxInsert     0   3   0                   8  key=r[3]
   8  Next            2   5   0                   0
   9  OpenRead        3   3   0  k(5,B,B,B,B,B)   0  table=former_employees, root=3, iDb=0
  10  Rewind          3  15   0                   0  Rewind table former_employees
  11    ColumnRange   3   1   4  2                0  r[4..5]=former_employees.columns[1..2]
  12    MakeRecord    4   2   6                   0  r[6]=mkrec(r[4..5]); for compound_dedupe
  13    IdxInsert     1   6   0                   8  key=r[6]
  14  Next            3  11   0                   0
  15  Rewind          0  21   0                   0  Rewind  ephemeral(compound_dedupe)
  16    RowData       0   7   0                   0  r[7] = data
  17    NotFound      1  20   7                   0  if not found goto 20
  18    ColumnRange   0   0   8  2                0  r[8..9]=ephemeral(compound_dedupe).columns[0..1]
  19    ResultRow     8   2   0                   0  output=r[8..9]
  20  Next            0  16   0                   0
  21  Close           1   0   0                   0
  22  Close           0   0   0                   0
  23  Halt            0   0   0                   0
  24  Transaction     0   1   6                   0  iDb=0 tx_mode=Read
  25  Goto            0   1   0                   0
