sqlite/conformance/sqlite-sqltests/snapshot_tests/setops/snapshots/setops__subquery-with-union.snap
---
source: setops.sqltest
expression: |-
  SELECT * FROM (
          SELECT name, department FROM current_employees
          UNION
          SELECT name, department FROM former_employees
      ) AS all_employees
      WHERE department = 'Engineering';
info:
  statement_type: SELECT
  tables:
  - current_employees
  - former_employees
  setup_blocks:
  - schema
  database: ':memory:'
---
QUERY PLAN
`--SCAN all_employees
   `--COMPOUND QUERY
      |--LEFT-MOST SUBQUERY
      |  `--SEARCH current_employees USING INDEX idx_current_dept (department=?)
      `--UNION USING TEMP B-TREE
         `--SEARCH former_employees USING INDEX idx_former_dept (department=?)

BYTECODE
addr  opcode          p1  p2  p3  p4              p5  comment
   0  Init             0  40   0                   0  Start at 40
   1  InitCoroutine    1  31   2                   0
   2  OpenEphemeral    0   0   0                   0  cursor=0 is_table=false
   3  OpenRead         1   2   0  k(4,B,B,B,B)     0  table=current_employees, root=2, iDb=0
   4  OpenRead         2   5   0  k(2,B)           0  index=idx_current_dept, root=5, iDb=0
   5  String8          0   4   0  Engineering      0  r[4]='Engineering'
   6  SeekGE           2  14   4                   0  key=[4..4]
   7    IdxGT          2  14   4                   0  key=[4..4]
   8    DeferredSeek   2   1   0                   0
   9    Column         1   1   2                   0  r[2]=current_employees.name
  10    Column         2   0   3                   0  r[3]=idx_current_dept.department
  11    MakeRecord     2   2   5                   0  r[5]=mkrec(r[2..3]); for compound_dedupe
  12    IdxInsert      0   5   0                   8  key=r[5]
  13  Next             2   7   0                   0
  14  OpenRead         3   3   0  k(5,B,B,B,B,B)   0  table=former_employees, root=3, iDb=0
  15  OpenRead         4   6   0  k(2,B)           0  index=idx_former_dept, root=6, iDb=0
  16  String8          0   6   0  Engineering      0  r[6]='Engineering'
  17  SeekGE           4  25   6                   0  key=[6..6]
  18    IdxGT          4  25   6                   0  key=[6..6]
  19    DeferredSeek   4   3   0                   0
  20    Column         3   1   2                   0  r[2]=former_employees.name
  21    Column         4   0   3                   0  r[3]=idx_former_dept.department
  22    MakeRecord     2   2   7                   0  r[7]=mkrec(r[2..3]); for compound_dedupe
  23    IdxInsert      0   7   0                   8  key=r[7]
  24  Next             4  18   0                   0
  25  Rewind           0  28   0                   0  Rewind  ephemeral(compound_dedupe)
  26    ColumnRange    0   0   2  2                0  r[2..3]=ephemeral(compound_dedupe).name..department
  27    Yield          1   0   0                   0
  28  Next             0  26   0                   0
  29  Close            0   0   0                   0
  30  EndCoroutine     1   0   0                   0
  31  InitCoroutine    1   0   2                   0
  32    Yield          1  39   0                   0
  33    Copy           3  11   0                   0  r[11]=r[3]
  34    Ne            11  12  38  Binary           0  if r[11]!=r[12] goto 38
  35    Copy           2   8   0                   0  r[8]=r[2]
  36    Copy           3   9   0                   0  r[9]=r[3]
  37    ResultRow      8   2   0                   0  output=r[8..9]
  38  Goto             0  32   0                   0
  39  Halt             0   0   0                   0
  40  Transaction      0   1   6                   0  iDb=0 tx_mode=Read
  41  String8          0  12   0  Engineering      0  r[12]='Engineering'
  42  Goto             0   1   0                   0
