sqlite/conformance/sqlite-sqltests/snapshot_tests/setops/snapshots/setops__union-all-basic.snap
---
source: setops.sqltest
expression: |-
  SELECT name, department FROM current_employees
      UNION ALL
      SELECT name, department FROM former_employees;
info:
  statement_type: SELECT
  tables:
  - current_employees
  - former_employees
  setup_blocks:
  - schema
  database: ':memory:'
---
QUERY PLAN
`--COMPOUND QUERY
   |--LEFT-MOST SUBQUERY
   |  `--SCAN current_employees
   `--UNION ALL
      `--SCAN former_employees

BYTECODE
addr  opcode         p1  p2  p3  p4              p5  comment
   0  Init            0  12   0                   0  Start at 12
   1  OpenRead        0   2   0  k(4,B,B,B,B)     0  table=current_employees, root=2, iDb=0
   2  Rewind          0   6   0                   0  Rewind table current_employees
   3    ColumnRange   0   1   1  2                0  r[1..2]=current_employees.columns[1..2]
   4    ResultRow     1   2   0                   0  output=r[1..2]
   5  Next            0   3   0                   0
   6  OpenRead        1   3   0  k(5,B,B,B,B,B)   0  table=former_employees, root=3, iDb=0
   7  Rewind          1  11   0                   0  Rewind table former_employees
   8    ColumnRange   1   1   3  2                0  r[3..4]=former_employees.columns[1..2]
   9    ResultRow     3   2   0                   0  output=r[3..4]
  10  Next            1   8   0                   0
  11  Halt            0   0   0                   0
  12  Transaction     0   1   6                   0  iDb=0 tx_mode=Read
  13  Goto            0   1   0                   0
