sqlite/conformance/sqlite-sqltests/snapshot_tests/setops/snapshots/setops__union-distinct.snap
---
source: setops.sqltest
expression: |-
  SELECT name, department FROM current_employees
      UNION
      SELECT name, department FROM former_employees;
info:
  statement_type: SELECT
  tables:
  - current_employees
  - former_employees
  setup_blocks:
  - schema
  database: ':memory:'
---
QUERY PLAN
`--COMPOUND QUERY
   |--LEFT-MOST SUBQUERY
   |  `--SCAN current_employees
   `--UNION USING TEMP B-TREE
      `--SCAN former_employees

BYTECODE
addr  opcode         p1  p2  p3  p4              p5  comment
   0  Init            0  20   0                   0  Start at 20
   1  OpenEphemeral   0   0   0                   0  cursor=0 is_table=false
   2  OpenRead        1   2   0  k(4,B,B,B,B)     0  table=current_employees, root=2, iDb=0
   3  Rewind          1   8   0                   0  Rewind table current_employees
   4    ColumnRange   1   1   1  2                0  r[1..2]=current_employees.columns[1..2]
   5    MakeRecord    1   2   3                   0  r[3]=mkrec(r[1..2]); for compound_dedupe
   6    IdxInsert     0   3   0                   8  key=r[3]
   7  Next            1   4   0                   0
   8  OpenRead        2   3   0  k(5,B,B,B,B,B)   0  table=former_employees, root=3, iDb=0
   9  Rewind          2  14   0                   0  Rewind table former_employees
  10    ColumnRange   2   1   4  2                0  r[4..5]=former_employees.columns[1..2]
  11    MakeRecord    4   2   6                   0  r[6]=mkrec(r[4..5]); for compound_dedupe
  12    IdxInsert     0   6   0                   8  key=r[6]
  13  Next            2  10   0                   0
  14  Rewind          0  17   0                   0  Rewind  ephemeral(compound_dedupe)
  15    ColumnRange   0   0   7  2                0  r[7..8]=ephemeral(compound_dedupe).columns[0..1]
  16    ResultRow     7   2   0                   0  output=r[7..8]
  17  Next            0  15   0                   0
  18  Close           0   0   0                   0
  19  Halt            0   0   0                   0
  20  Transaction     0   1   6                   0  iDb=0 tx_mode=Read
  21  Goto            0   1   0                   0
